<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@id/homeItem"
        android:title="homeItem" />
    <item
        android:id="@id/gameDetailsItem"
        android:title="gameDetailsItem" />
</menu>